# RAG_ChatBot

./: .gitattributes  Normal.ipynb  Project Initiation Document (PID).md  app.py  main.py  pyproject.toml  requirements.md  requirements.txt
chroma_db/: chroma.sqlite3  info.json
