[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.12",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.8.5",
    "langchain-community>=0.3.25",
    "langchain-core>=0.1.46",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "tensorflow==2.19.0",
    "tensorflow-hub==0.16.1",
    "tensorflow-text==2.19.0",
]
